# caif

./: .gitignore  CHANGES.md  CLAUDE.md  CMakeLists.txt  DESIGN.md  LICENSE  README.md
examples/: CMakeLists.txt  finetune_lora.cpp  inference_quantized.cpp  mha_qknorm_partial_rope.cpp  moe_frozen_expert_extension.cpp  moe_router_norm_topk_prob.cpp  train_transformer.cpp
include/caif/: caif_activation_aware.h  caif_activation_type.h  caif_activations.h  caif_adagrad_optimizer.h  caif_adam_optimizer.h  caif_average_pooling2d_layer.h  caif_base.h  caif_batch_norm_cudnn_helpers.h  caif_batch_normalization_layer.h  caif_batch_ops.h  caif_blas.h  caif_blas_backend.h  caif_block_offload_scheduler.h  caif_categorical_cross_entropy_loss.h  caif_constants.h  caif_conv2d_backend.h  caif_convolution2d_layer.h  caif_convolution_ops.h  caif_cpu_tensor_data.h  caif_cross_entropy_loss.h  caif_cuda_event.h  caif_cuda_kernels.h  caif_cuda_kernels_activations.cuh  caif_cuda_kernels_attention_support.cuh  caif_cuda_kernels_common.cuh  caif_cuda_kernels_constants.cuh  caif_cuda_kernels_elementwise.cuh  caif_cuda_kernels_embeddings.cuh  caif_cuda_kernels_flash_common.cuh  caif_cuda_kernels_flash_cross.cuh  caif_cuda_kernels_flash_mla.cuh  caif_cuda_kernels_flash_self.cuh  caif_cuda_kernels_loss.cuh  caif_cuda_kernels_moe.cuh  caif_cuda_kernels_normalization.cuh  caif_cuda_kernels_optimizers.cuh  caif_cuda_kernels_quant.cuh  caif_cuda_kernels_tensor_ops.cuh  caif_cuda_stream.h  caif_cudnn_util.h  (+183 more)
ise_lib/: CMakeLists.txt
ise_lib/include/ise_lib/: ise_base.h  ise_dead_stream.h  ise_exception.h  ise_out.h
ise_lib/src/: ise_base.cpp  ise_exception.cpp  ise_out.cpp
retrainer/: CMakeLists.txt  README.md
retrainer/include/retrainer/: rtnr_constants.h  rtnr_exception.h  rtnr_glm_model_builder.h  rtnr_qwen_model_builder.h  rtnr_token_loader.h  rtnr_trainer.h
retrainer/scripts/: convert_hf_model.py  download_model.py  export_gguf.py  export_gguf_qwen.py  inspect_safetensors.py  inspect_training_data.py  merge_lora.py  rtnr_tokenize.py  tokenize_chat.py
retrainer/src/: main.cpp  rtnr_glm_model_builder.cpp  rtnr_qwen_model_builder.cpp  rtnr_token_loader.cpp  rtnr_trainer.cpp
src/: caif_activation_aware.cpp  caif_activation_type.cpp  caif_activations.cpp  caif_adagrad_optimizer.cpp  caif_adam_optimizer.cpp  caif_average_pooling2d_layer.cpp  caif_base.cpp  caif_batch_norm_cudnn_helpers.cpp  caif_batch_normalization_layer.cpp  caif_batch_ops.cpp  caif_blas.cpp  caif_blas_backend.cpp  caif_block_offload_scheduler.cpp  caif_categorical_cross_entropy_loss.cpp  caif_conv2d_backend.cpp  caif_convolution2d_layer.cpp  caif_convolution_ops.cpp  caif_cpu_tensor_data.cpp  caif_cross_entropy_loss.cpp  caif_cuda_event.cpp  caif_cuda_kernels.cu  caif_cuda_kernels_activations.cu  caif_cuda_kernels_attention_support.cu  caif_cuda_kernels_cpu.cpp  caif_cuda_kernels_elementwise.cu  caif_cuda_kernels_embeddings.cu  caif_cuda_kernels_flash_cross.cu  caif_cuda_kernels_flash_mla.cu  caif_cuda_kernels_flash_self.cu  caif_cuda_kernels_loss.cu  caif_cuda_kernels_moe.cu  caif_cuda_kernels_normalization.cu  caif_cuda_kernels_optimizers.cu  caif_cuda_kernels_quant.cu  caif_cuda_kernels_tensor_ops.cu  caif_cuda_stream.cpp  caif_data_type.cpp  caif_dense_layer.cpp  caif_device_average_pooling2d.cpp  caif_device_average_pooling2d_factory.cpp  (+145 more)
tests/: CMakeLists.txt  README.md  SConstruct  bench_pytorch_t5_geglu.py  caif_grad_mode.h  caif_gradcheck.cpp  caif_gradcheck.h  caif_gradcheck_target_functor.h  caif_sigmoid_noaux_tc_router_functor.h  caif_test_constants.h  caif_test_harness.cpp  caif_test_harness.h  caif_tolerances.h  run_all_tests.cpp  test_activation_functions.cpp  test_activations.cpp  test_adam_master_weights.cpp  test_attn_alibi.cpp  test_attn_dropout.cpp  test_attn_logit_softcap.cpp  test_attn_sliding_window.cpp  test_bias_gradients.cpp  test_bug_adam_nan_grad.cpp  test_bug_adamw_decay_order.cpp  test_bug_dense_grad_accumulation.cpp  test_bug_embedding_grad_precision.cpp  test_bug_fill_uaf.cpp  test_bug_gelu_exact_erf.cpp  test_bug_host_matmul_dtype_guard.cpp  test_bug_layernorm_variance.cpp  test_bug_moe_capacity_nodrop.cpp  test_bug_moe_routed_scaling.cpp  test_bug_safetensors_validation.cpp  test_cast_ops.cpp  test_conv_backprop_activation_grad.cpp  test_conv_layer.cpp  test_dense_layer.cpp  test_device_attention.cpp  test_device_cross_attention.cpp  test_device_cross_entropy.cpp  (+69 more)
tests/caif_cpu_reference/: caif_cpu_activations.h  caif_cpu_cross_entropy.h  caif_cpu_embedding.h  caif_cpu_layernorm.h  caif_cpu_linear.h  caif_cpu_matmul.h  caif_cpu_patch_extract.h  caif_cpu_relative_position.h  caif_cpu_rmsnorm.h  caif_cpu_rope.h  caif_cpu_softmax.h
tests/test_serializer_models/: test_jsonbinary_model.json
